--- a/domain.yml
+++ b/domain.yml
@@ -33,6 +33,9 @@ responses:
   utter_bot_name:
     - text: "Enthiran 3.0"
 
+  utter_body_aches:
+    - text: "What do you want to learn about body aches? "
+
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
