--- a/credentials.yml
+++ b/credentials.yml
@@ -2,26 +2,25 @@
 # which your bot is using.
 # https://rasa.com/docs/rasa/messaging-and-voice-channels
 
-rest:
-  # pass
+# pass
 
-  #facebook:
-  #  verify: "<verify>"
-  #  secret: "<your secret>"
-  #  page-access-token: "<your page access token>"
+#facebook:
+#  verify: "<verify>"
+#  secret: "<your secret>"
+#  page-access-token: "<your page access token>"
 
-  #slack:
-  #  slack_token: "<your slack token>"
-  #  slack_channel: "<the slack channel>"
-  #  slack_signing_secret: "<your slack signing secret>"
+#slack:
+#  slack_token: "<your slack token>"
+#  slack_channel: "<the slack channel>"
+#  slack_signing_secret: "<your slack signing secret>"
 
-  #socketio:
+socketio:
   user_message_evt: user_uttered
   bot_message_evt: bot_uttered
   session_persistence: true
 
-  callback:
-  # URL to which Core will send the bot responses
+callback:
+# URL to which Core will send the bot responses
   url: "http://localhost:5005/bot"
 
 #mattermost:
