--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -103,10 +103,12 @@ nlu:
       - i feel painful
       - i have a body ache
       - i want to learn about body aches
+      - pain
 
   - intent: body_aches_types
     examples: |
       - types
+      - types of body aches
   - intent: body_aches_influence
     examples: |
       - influence
@@ -117,17 +119,32 @@ nlu:
 
   
 
+  #after theyve been asked what they want to learn about body aches
+  - intent: choose_body_ache_topic
+    examples: |
+      - [types](topic)
+      - [influencing factors](topic)
+     #- [selfcare](topic)
+      # - [other](topic)
+  - regex: topic
+    examples: |
+      - ^(influencing factors|types|self care|other)$
+
+  #- lookup: influencing factors
+
   - intent: body_aches_sciatica_influence
     examples: |
-      - sciatica
-      
+      - influence of sciatica
+      - what causes sciatica
+
   - intent: body_aches_sciatica_definition
     examples: |
-      - sciatica
+      - what is sciatica
 
   - intent: body_aches_round_ligament_definition
     examples: |
-      - round ligament
+     - round ligament
+     - what is round ligament
 
   - intent: body_aches_carpal_tunnel_definition
     examples: |
