--- a/data/stories.yml
+++ b/data/stories.yml
@@ -54,6 +54,7 @@ stories:
       - slot_was_set:
           - sciatica: sciatica
       - action: utter_body_aches_sciatica_definition
+      - action: action_clear_sciatica_slot
 
   - story: body_ache_types_carpal_tunnel_path
     steps:
@@ -67,6 +68,8 @@ stories:
       - slot_was_set:
           - carpal_tunnel: carpal tunnel
       - action: utter_body_aches_carpal_tunnel_definition
+      - action: action_clear_carpal_tunnel_slot
+
 
   - story: body_ache_influencing_path
     steps:
